# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: project-check.yml
gendiff/: __init__.py  args_parser.py  data_parser.py  diff_engine.py  difference.py  parser.py  result_maker.py  stylish.py
gendiff/formatters/: common.py  formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/test_gendiff/: deb_rec1.json  deb_rec2.json  deb_rec_exp  deb_rec_fplain_exp  hx_plain_exp  hx_plain_fplain_exp  input_file2.json  input_file2.yml
tests/fixtures/test_gendiff/plain/: hx_plain_exp
tests/fixtures/test_gendiff/recursive/: deb_file1.json  deb_json_exp
