[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "difference_calculator" },
]

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "difference_calculator.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
